--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -750,18 +750,22 @@ $btn-mb: 0.5rem;
       @extend %clickable-transition;
       @extend %sidebar-link-hover;
 
-      color: var(--site-title-color);
+      font-weight: 900;
+      font-size: 1.5rem;
+      letter-spacing: 0.5px;
+      color: rgba(254, 254, 254, 99%);
     }
   }
 
   .site-subtitle {
     font-size: 95%;
-    color: var(--site-subtitle-color);
-    margin-top: 0.25rem;
+    /*
+    color: var(--sidebar-muted-color);
+    */
+    color: rgba(254, 254, 254, 99%);
+    line-height: 1.2rem;
     word-spacing: 1px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+    min-height: 3rem; // avoid vertical shifting in multi-line words
     user-select: none;
   }
 
