--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -133,3 +133,11 @@ tail_includes:
   </div>
   <!-- div.post-tail-wrapper -->
 </article>
+<!-- 댓글 Snippet -->
+<script src="https://utteranc.es/client.js"
+        repo="BeaverDW/beaverdw.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
