--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -108,7 +108,11 @@ tail_includes:
         {% endfor %}
       </div>
     {% endif %}
-
+      <!-- hits-->
+    <div style="margin-top: 26px;">
+      <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}%2F&count_bg=%23000000&title_bg=%23555555&icon=jekyll.svg&icon_color=%23E7E7E7&title=hits&edge_flat=false" style="height: 25px;"/></a>  
+    </div>
+    <!-- hits end-->
     <div
       class="
         post-tail-bottom
@@ -129,8 +133,11 @@ tail_includes:
 
       {% include post-sharing.html lang=lang %}
     </div>
+    
     <!-- .post-tail-bottom -->
   </div>
+
+  
   <!-- div.post-tail-wrapper -->
 </article>
 <!-- 댓글 Snippet -->
