--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -110,7 +110,7 @@ tail_includes:
     {% endif %}
       <!-- hits-->
     <div style="margin-top: 26px;">
-      <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}%2F&count_bg=%23000000&title_bg=%23555555&icon=jekyll.svg&icon_color=%23E7E7E7&title=hits&edge_flat=false" style="height: 25px;"/></a>  
+      <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}%2F&count_bg=%23000000&title_bg=%23555555&icon=jekyll.svg&icon_color=%23E7E7E7&title=hits&edge_flat=false" style="height: 25px;" alt="hits image"/></a>  
     </div>
     <!-- hits end-->
     <div
